<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="baileya4.crossswitch.MainMenuActivity"
    tools:showIn="@layout/activity_main_menu"
    android:background="@drawable/outer_border">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:background="@drawable/title_border"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/player_name"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/user_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_weight="8"
                android:gravity="center"
                android:text=""
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPlayerSelect"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:background="@android:drawable/alert_dark_frame"
                android:backgroundTint="@android:color/black"
                android:padding="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/select"
                android:textSize="18sp"
                android:textColor="@android:color/holo_blue_bright"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnHighScore"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:background="@android:drawable/alert_dark_frame"
                android:backgroundTint="@android:color/black"
                android:padding="20dp"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/view"
                android:textSize="18sp"
                android:textColor="@android:color/holo_blue_bright"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/black"
            android:layout_columnWeight="1" />

        <TextView
            android:id="@+id/single"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/single"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cross_switch"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:background="@android:drawable/alert_light_frame"
                android:backgroundTint="@android:color/black"
                android:drawableStart="@drawable/cs_icon"
                android:textSize="24sp"
                android:text="@string/crossswitch"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_blue_bright" />

            <Button
                android:id="@+id/infoCS"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:drawable/alert_light_frame"
                android:backgroundTint="@android:color/black"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textColor="@android:color/holo_blue_bright"
                android:layout_weight="1"
                android:text="@string/info" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/match"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:background="@android:drawable/alert_light_frame"
                android:backgroundTint="@android:color/black"
                android:drawableStart="@drawable/cc_icon"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:text="@string/match"
                android:textColor="@android:color/holo_blue_bright" />

            <Button
                android:id="@+id/infoCM"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:drawable/alert_light_frame"
                android:backgroundTint="@android:color/black"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textColor="@android:color/holo_blue_bright"
                android:layout_weight="1"
                android:text="@string/info" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/color"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:background="@android:drawable/alert_light_frame"
                android:backgroundTint="@android:color/black"
                android:drawableStart="@drawable/color_icon"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:text="@string/color"
                android:textColor="@android:color/holo_blue_bright" />

            <Button
                android:id="@+id/infoColor"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:drawable/alert_light_frame"
                android:backgroundTint="@android:color/black"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textColor="@android:color/holo_blue_bright"
                android:layout_weight="1"
                android:text="@string/info" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/black"
            android:layout_columnWeight="1" />

        <TextView
            android:id="@+id/two_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/multi"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ttt"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:background="@android:drawable/alert_light_frame"
                android:backgroundTint="@android:color/black"
                android:drawableStart="@drawable/ttt_icon"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:text="@string/ttt"
                android:textColor="@android:color/holo_blue_bright" />

            <Button
                android:id="@+id/infoTTT"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:drawable/alert_light_frame"
                android:backgroundTint="@android:color/black"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textColor="@android:color/holo_blue_bright"
                android:layout_weight="1"
                android:text="@string/info" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/black"
            android:layout_columnWeight="1" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
