<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:descendantFocusability="beforeDescendants"
    tools:context="baileya4.crossswitch.AddActivity">

    <TextView
        android:id="@+id/label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/label_name"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/input_name"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_marginLeft="50dp"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:layout_marginTop="50dp"
        android:background="@android:drawable/alert_dark_frame"
        android:onClick="insert"
        android:text="@string/button_add"
        android:textColor="@android:color/background_light" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="3"
        android:layout_marginTop="50dp"
        android:background="@android:drawable/alert_dark_frame"
        android:onClick="goBack"
        android:text="@string/button_back"
        android:textColor="@android:color/background_light" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:background="@android:color/black"
        android:layout_columnWeight="1"
        android:layout_columnSpan="3"
        android:layout_column="0"
        android:layout_row="9"/>

</GridLayout>
