<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="baileya4.crossswitch.CsMenuActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <!--Alexander Bailey, CSCI 412-->

    <LinearLayout
        android:id="@+id/menuGrid"
        android:layout_width="500dp"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginStart="50dp"
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <Button
            android:id="@+id/btnSquare4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:background="@android:drawable/alert_dark_frame"
            android:backgroundTint="@android:color/black"
            android:drawableTop="@mipmap/four_small"
            android:gravity="center"
            android:text="@string/name4"
            android:textSize="18sp"
            android:textColor="@android:color/holo_blue_bright"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/least"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/moves4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="100"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnSquare5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:background="@android:drawable/alert_dark_frame"
            android:backgroundTint="@android:color/black"
            android:drawableTop="@mipmap/five_small"
            android:gravity="center"
            android:text="@string/name5"
            android:textSize="18sp"
            android:textColor="@android:color/holo_blue_bright"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/least"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/moves5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="100"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnDmnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:background="@android:drawable/alert_dark_frame"
            android:backgroundTint="@android:color/black"
            android:drawableTop="@mipmap/diamond_small"
            android:gravity="center"
            android:text="@string/nameD"
            android:textSize="18sp"
            android:textColor="@android:color/holo_blue_bright"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/titleD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/least"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/movesD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="100"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:background="@android:drawable/alert_dark_frame"
                android:backgroundTint="@android:color/black"
                android:padding="20dp"
                android:gravity="center"
                android:text="@string/back"
                android:textSize="18sp"
                android:textColor="@android:color/holo_blue_bright"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text=""
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/alert_dark_frame"
            android:backgroundTint="@android:color/holo_green_light"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:text="@string/help_cs"
            android:textSize="24sp" />

    </LinearLayout>

</RelativeLayout>
